--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     tools:context="martin.mytimeline.MainActivity">
 
     <TextView
+        android:id="@+id/time"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="#a0f0" />
+        android:layout_height="200dp"
+        android:text="时间"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,10 +21,10 @@
             android:id="@+id/line"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginTop="90dp"
             android:background="#aaa" />
 
         <martin.mytimeline.MyScrollView
+            android:id="@+id/sv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
