--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,12 @@
         android:id="@+id/time"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:text="时间"/>
+        android:text="时间" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorAccent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
